search-system/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: search-system
  labels:
    name: search-system
